@@ -7,6 +7,9 @@
 	function to call is exmpp_stanza:set_id_in_attrs/2, not
 	exmpp_stanza:set_id/2.
 
+	* testsuite/check_xml_converters.erl: Fix testsuite after
+	exmpp_xml:document_fragment_to_list/3 was renamed.
+
 2008-06-30  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
 
 	* testsuite/test.sh: erl(1) is called with the +B flags so that ^C
